--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
 
   deploy:
     if: github.ref == 'master' && github.event_name == 'push'
+    runs-on: ubuntu-latest
     needs: test
     environment: 
       name: do-production
